@@ -2,6 +2,13 @@ Change history for SBOM::CycloneDX
 
 1.0? 2025-??-??
     - Fix name in Makefile.PL (giterlizzi/perl-SBOM-CycloneDX#2)
+    - Fix mapping of "perl_5" license with SPDX expression
+      "Artistic-1.0-Perl OR GPL-1.0-or-later" (giterlizzi/perl-SBOM-CycloneDX#3)
+    - Improved "SBOM::CycloneDX::License" behavior
+    - Improved mapping of CPAN::Meta licenses to SPDX
+    - Added support for SPDX "NOASSERTION" and "NONE" licenses:
+      https://spdx.github.io/spdx-spec/v3.0.1/model/ExpandedLicensing/Individuals/NoAssertionLicense/
+      https://spdx.github.io/spdx-spec/v3.0.1/model/ExpandedLicensing/Individuals/NoneLicense/
 
 1.03 2025-03-31
     - Improved documentation
